<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"

    >

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_Payment"
            android:icon="@drawable/ic_payment_black_24dp"
            android:title="@string/menu_Payment" />
        <item
            android:id="@+id/nav_Offers"
            android:icon="@drawable/ic_card_giftcard_black_24dp"
            android:title="@string/menu_Offers" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_setting" />



    </group>
    <item android:title="To join us!">
        <menu>
            <item
                android:id="@+id/nav_driver"
                android:icon="@drawable/ic_directions_car_black_24dp"
                android:title="@string/menu_driver" />

        </menu>
    </item>



</menu>
