<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="300dp">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/offer2Topic"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contentoffer2"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/use_code"
        android:gravity="center"
        android:textColor="@color/white"
        android:layout_marginTop="70dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#0C0C0C"
            android:text="MorningTrip"
            android:textSize="18dp"
            android:textColor="#F2F8F8"
            android:textStyle="bold"/>

    </RelativeLayout>

</LinearLayout>