<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccentLight">

<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif"
        android:layout_width="match_parent"
        android:layout_height="244dp"
        android:src="@drawable/gif_monitor"
        />
<RelativeLayout
    android:id="@+id/relLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginStart="3dp"
    android:layout_gravity="center_vertical">

    <TextView
        android:id="@+id/live"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@android:color/black"
        android:padding="10dp"
        android:text="@string/live"
        android:textColor="@android:color/white"
        android:textSize="12dp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/live"
        android:foregroundGravity="center_vertical"
        android:src="@drawable/ic_fiber_manual_record_black_24dp" /></RelativeLayout>


</RelativeLayout>


<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:orientation="horizontal">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from"

        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        />

    <EditText  android:id="@+id/fromContent"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textColor="@color/black"
        android:focusable="false"
        android:textAlignment="center"
        android:editable="false"
        android:background="@drawable/edittext_rounded_corners"/>

</LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/To"
            android:textStyle="bold"

            android:textSize="20dp"
            android:textColor="@color/colorAccent"
            />


        <EditText
            android:id="@+id/ToContent"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="34dp"
            android:textColor="@color/black"
            android:focusable="false"
            android:editable="false"
            android:textAlignment="center"
            android:background="@drawable/edittext_rounded_corners" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/expTime"
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20dp"
            android:padding="10dp"/>

        <TextView
            android:id="@+id/expTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawableStart="@drawable/ic_timer_black_24dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/expTimeContent"
            android:textSize="20dp"
            android:textStyle="bold"
            android:drawablePadding="5dp"/>
    </LinearLayout>


    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent"
        android:layout_below="@id/cash"
        />

    <LinearLayout
        android:id="@+id/share_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/ic_share_black_24dp" />

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="20dp"
            android:text="@string/shareTrip"
            />


    </LinearLayout>
    <LinearLayout
        android:id="@+id/help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_warning_black_24dp"/>

        <TextView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help"
            android:textSize="20dp"
            android:padding="10dp"
            />


    </LinearLayout>

</LinearLayout>