<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/path_img_"
    android:orientation="vertical"
    tools:context=".RegisterActivity"
    >

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:titleTextColor="@android:color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:id="@+id/layout"
        android:background="#D8FFFFFF"
        android:layout_marginTop="350dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        >
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center">
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <EditText
            android:id="@+id/name_driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="0dp"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/dname"
            android:inputType="textPersonName"
            android:text="@string/driver_name"
            android:textColor="#000"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="228dp" />
    </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="50dp">
            <ImageView
                android:id="@+id/personalImageSignup"
                android:layout_width="120dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:adjustViewBounds="true"
                android:padding="0dp"
                app:srcCompat="@drawable/circle_driver" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"

                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_star" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="4.86" />
            </LinearLayout>
        </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/car_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:ems="10"
            android:hint="@string/car_type"
            android:inputType="textPersonName"
            android:textColor="#000"
            tools:layout_editor_absoluteX="27dp"
            tools:layout_editor_absoluteY="228dp"
            android:drawableStart="@drawable/ic_directions_car_black_24dp"
            android:text="@string/mercedes_2019"/>
    </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

            <EditText
                android:id="@+id/car_plate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="20dp"
                android:ems="10"
                android:hint="@string/car_plate"
                android:inputType="textPersonName"
                android:text="@string/car_num"
                android:textColor="#000"
                tools:layout_editor_absoluteX="27dp"
                tools:layout_editor_absoluteY="228dp" />
    </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <Button
            android:id="@+id/continue_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_gravity="center_horizontal|fill_horizontal"
            android:background="@drawable/button_bg"
            android:text="@string/continue_button"
            android:textColor="#FFFF"
            android:textSize="18dp" />

    <ImageView
        android:id="@+id/call"
        android:layout_width="45dp"
        android:layout_height="match_parent"
        android:src="@drawable/ic_call_black"
/>



</LinearLayout>

    </LinearLayout>




</LinearLayout>



